--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
   },
   "homepage": "https://github.com/byxzESC/Note-sharing#readme",
   "dependencies": {
-    "ejs": "^3.1.8"
-  }
-}
-{
-  "dependencies": {
+    "ejs": "^3.1.8",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
