--- a/package.json
+++ b/package.json
@@ -1,35 +1,32 @@
 {
-  "name": "note-sharing",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/byxzESC/Note-sharing.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/byxzESC/Note-sharing/issues"
-  },
-  "homepage": "https://github.com/byxzESC/Note-sharing#readme",
-  "dependencies": {
-    "ejs": "^3.1.8"
-  }
-}
-{
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mysql2": "^3.1.2",
-    "nodemon": "^2.0.20",
-    "path": "^0.12.7",
-    "sequelize": "^6.28.0"
-  }
+	"name": "note-sharing",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/byxzESC/Note-sharing.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/byxzESC/Note-sharing/issues"
+	},
+	"homepage": "https://github.com/byxzESC/Note-sharing#readme",
+	"dependencies": {
+		"bcrypt": "^5.1.0",
+		"connect-session-sequelize": "^7.1.5",
+		"dotenv": "^16.0.3",
+		"ejs": "^3.1.8",
+		"express": "^4.18.2",
+		"express-session": "^1.17.3",
+		"lodash": "^4.17.21",
+		"mysql2": "^3.1.2",
+		"path": "^0.12.7",
+		"sequelize": "6"
+	}
 }
