--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "server.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node server.js"
+		"start": "node server.js",
+		"seed": "node ./seeds/seed.js"
 	},
 	"repository": {
 		"type": "git",
@@ -28,5 +29,8 @@
 		"mysql2": "^3.1.2",
 		"path": "^0.12.7",
 		"sequelize": "6"
+	},
+	"devDependencies": {
+		"@faker-js/faker": "^7.6.0"
 	}
 }
