--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "mysql2": "^3.1.2",
     "path": "^0.12.7",
+    "quill-delta-to-html": "^0.12.1",
     "sequelize": "6"
   },
   "devDependencies": {
